--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
+    "postinstall": "npm run prestart:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
