--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=12.16.2"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
