--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=12.16.2"
+    "node": ">=12.16.x",
+    "npm": "6.14.x"
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -15,7 +16,7 @@
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
-    "start:prod": "node dist/src/main",
+    "start:prod": "node dist/main",
     "postinstall": "npm run prestart:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
