--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=12.16.x",
+    "node": "12.16.x",
     "npm": "6.14.x"
   },
   "scripts": {
