--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
     "start:prod": "node dist/main",
-    "postinstall": "npm run prestart:prod",
+    "postinstall": "npm run start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
