--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^7.0.13",
     "@nestjs/websockets": "^7.0.13",
     "@types/socket.io": "^2.1.8",
+    "jsonfile": "^6.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
